--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+@import './custom-theme.scss';
+
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0px;
+  height: 100vh;
+}
+
+html, body { height: 100vh;   margin: 0px; }
+
+body { font-family: Roboto, "Helvetica Neue", sans-serif;  margin: 0px; height: 100vh;}
