--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <div class="container">
             <app-summary></app-summary>  
         </div>
-        <button (click)="opened=!opened">Toggle Open</button>
+        <button (click)="opened=!opened">Toggle Open!</button>
     </mat-sidenav-content>
 </mat-sidenav-container>
 <div class="spacer"></div>
